fis-soap2rest/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ${project.artifactId}
spec:
  host: soap2rest-integration-service.apps.example.com
  port:
    targetPort: 10000
  to:
    kind: Service
    name: ${project.artifactId}
